@@ -570,6 +570,10 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 2832) [[Special:Listadmins]] redirects to [[Special:Listusers/sysop]]
 * (bug 785) Parser did not get out of <pre> with list elements
 * Some shared upload fixes
+* (bug 2768) section=new on nonexistent talk page does not add heading
+* support preload= parameter for section=new
+* show comment subject in preview when using section=new
+* use comment form when creating a new talk page
 * (bug 460) Properly handle <center> tags as a block.
 
 === Caveats ===
